k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: indie-rock-ingress
  annotations:
    # Tidak perlu host, akses langsung via External IP Ingress Controller
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      # ============================================
      # Path /api → diarahkan ke backend-service
      # ============================================
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 5000
      # ============================================
      # Path / → diarahkan ke frontend-service
      # ============================================
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
